syntax = "proto2";

import public "common_client.proto";
import public "ddz_base.proto";

package ddproto;
option optimize_for = LITE_RUNTIME;

// 创建房间
message ddz_req_createDesk {
    optional ProtoHeader header = 1;
    optional ddz_base_roomTypeInfo roomTypeInfo = 2; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

// 创建房间回复的信息
message ddz_ack_createDesk {
    optional ProtoHeader header = 1;
    optional int32 deskId = 2; // 用户id
    optional string password = 3; // 房间密码
    optional int64 userBalance = 4; // 用户的余额
    optional int64 createFee = 5; // 创建房间的费用
    optional ddz_base_roomTypeInfo roomTypeInfo = 6; // 房间类型信息，包括：房间类型、局数、封顶、玩法、牌张、结算、底
}

//游戏战绩
message ddz_req_gameRecord {
    optional ProtoHeader header = 1;
    optional int32 id = 2; //战绩id
    optional uint32 userId = 3; //用户id
}
//
message ddz_base_userRecord {
    optional ProtoHeader header = 1;
    optional uint32 UserId = 2; //用户id
    optional string NickName = 3; //用户昵称
    optional int64 WinAmount = 4; //用户输赢金额
}
//
message ddz_base_gameRecord {
    optional ProtoHeader header = 1;
    optional int32 id = 2; //战绩id
    optional int32 deskId = 3; //关联的桌子的Id
    optional string beginTime = 4; //游戏开始的时间
    repeated ddz_base_userRecord users = 5; //用户
}
//
message ddz_ack_gameRecord {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; //用户id
    repeated ddz_base_gameRecord records = 3; //结果
}

// 客户端请求进入 room, 服务器返回DdzSendGameInfo
message ddz_req_enterDesk {
    optional ProtoHeader header = 1;
    optional int32 matchId = 2;
    optional int32 tableId = 3;
    optional string PassWord = 4; // 房间密码 金币场不使用
    optional uint32 userId = 5; // 请求的userId

    optional ddz_enum_enterType enterType = 6; // 进入的类型
    optional ddz_enum_coinRoomLevel coinRoomLevel = 7; //金币场的级别 朋友桌不使用

    optional bool isContinuous = 8; //是否是连续游戏 金币场使用
}

message ddz_ack_enterDesk {
    optional ProtoHeader header = 1;
}

